--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@vercel/blob": "^0.27.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
